Fix header 2 styling invisible

--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -44,10 +44,6 @@ h1 {
   font-size: 28px;
 }
 
-h2 {
-  color: #DEDEDE;
-}
-
 h3,
 h4,
 h5,
